# AI_Smart_xiaozhi

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  idf_component.yml  main.c
main/app/: application.c  application.h
main/audio_process/: audio_decoder.c  audio_decoder.h  audio_encoder.c  audio_encoder.h  audio_sr.c  audio_sr.h
main/bsp/: bsp_lcd.c  bsp_lcd.h  bsp_sound.c  bsp_sound.h  bsp_wifi.c  bsp_wifi.h
main/com/: Com_Debug.h
main/commu/: ota.c  ota.h  ws.c  ws.h
main/display/: display.c  display.h
main/iot/: descripor.txt  iot.c  iot.h  state.txt
